Terraform folder/igw.tf
# =====================================
# Internet Gateway
# =====================================

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "${var.project_name}-IGW"
  }
}
